# arbitrage_bot

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 202410251640_initial_schema.py  79ecbe02a3ac_add_symbol_ts_indexes.py  8d3e41d1c1cd_expand_market_tables.py
backend/app/: main.py
backend/app/api/: dependencies.py  router.py
backend/app/api/routes/: config.py  health.py  logs.py  markets.py  metrics.py  ws.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: market.py
backend/app/schemas/: config.py  market_summary.py
backend/app/services/: config_service.py  hl_market_data.py  log_store.py  status_tracker.py
backend/tests/: test_health.py  test_metrics.py
config/: default.yaml
docs/: ARCHITECTURE.md  BACKEND_API.md  CHANGELOG_TEMPLATE.md  CONFIGURATION.md  CONTRIBUTING_AGENT_RULES.md  COST_MODEL.md  DATA_MODEL.md  DOCKER_COMPOSE.md  ENVIRONMENT.md  FEATURE_FLAGS.md  GLOSSARY.md  GOALS_AND_SCOPE.md  KICKOFF_PROMPT.md  LATENCY_HUD.md  LIVE_MODE.md  MAKEFILE.md  PAIR_SCORING.md  PAPER_MODE.md  PHASE1A_PROMPT.md  PHASE2_PROMPT.md  README.md  RISK_MANAGEMENT.md  ROADMAP.md  RUNBOOK.md  SECURITY.md  STRATEGY.md  TEST_PLAN.md  UI_SPEC.md
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: ConnectionStatusCard.tsx  LatencyHud.tsx  (+1 more)
worker/: Dockerfile  pyproject.toml
worker/app/: main.py  settings.py
(+6 files in other folders)
