[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arbitrage-worker"
version = "0.1.0"
description = "Background worker placeholder for arbitrage bot"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings==2.5.2",
    "redis==5.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2"
]
